objects/pse__Default_Assignments_for_Jira_Batch__c.object
<CustomObject>
    <customHelpPage>pse__DefaultAssignmentsForJiraBatchHelp</customHelpPage>
    <description>Stores the status and details of Default Assignments for Jira Batch Apex jobs.</description>
    <fields>
        <fullName>pse__Apex_Job_ID__c</fullName>
        <description>Unique identifier for the current batch Apex job.</description>
        <inlineHelpText>Unique identifier for the current batch Apex job.</inlineHelpText>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the batch process record. The batch process record is deleted automatically if the process completes successfully.</description>
        <inlineHelpText>Lookup to the batch process record. The batch process record is deleted automatically if the process completes successfully.</inlineHelpText>
        <label>Batch Process</label>
        <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Default Assignments for Jira Batches</relationshipLabel>
        <relationshipName>Assignments_to_Sync_Time_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Default_Assignments_for_Jira_Batch_ID__c</fullName>
        <description>The batch record identifier.</description>
        <displayFormat>DAJB-{000000}</displayFormat>
        <inlineHelpText>The batch record identifier.</inlineHelpText>
        <label>Default Assignments for Jira Batch ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Notification_Type__c</fullName>
        <description>The type of notification sent when the process completed: Successful, Failure, or Mixed.</description>
        <formula>IF( pse__Total_Number_of_Logs__c = 0, &apos;Undefined&apos;,
IF ( AND( pse__Total_Number_of_Errors__c=0,pse__Total_Number_of_Aborts__c=0,pse__Total_Number_of_External__c=0), 
&apos;Successful&apos;, 
IF(pse__Total_Number_of_Errors__c = pse__Total_Number_of_Logs__c, 
&apos;Failure&apos;, 
IF(pse__Total_Number_of_Aborts__c &gt; 0, 
&apos;Failure&apos;, 
IF( pse__Total_Number_of_External__c &gt; 0, 
&apos;Failure&apos;, 
&apos;Mixed&apos; 
) 
) 
)
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The type of notification sent when the process completed: Successful, Failure, or Mixed.</inlineHelpText>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The current status of the batch job: &quot;Processing&quot;, &quot;Complete&quot;, or &quot;Error&quot;.</description>
        <inlineHelpText>The current status of the batch job: &quot;Processing&quot;, &quot;Complete&quot;, or &quot;Error&quot;.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Total_Number_of_Aborts__c</fullName>
        <description>The number of logs where Log Type is Abort.</description>
        <inlineHelpText>The number of logs where Log Type is Abort.</inlineHelpText>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>pse__Default_Assignments_for_Jira_Batch_Logs__c.pse__Log_Type__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>pse__Default_Assignments_for_Jira_Batch_Logs__c.pse__Default_Assignments_for_Jira_Batch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Total_Number_of_Errors__c</fullName>
        <description>The number of logs where Log Type is Error.</description>
        <inlineHelpText>The number of logs where Log Type is Error.</inlineHelpText>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>pse__Default_Assignments_for_Jira_Batch_Logs__c.pse__Log_Type__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>pse__Default_Assignments_for_Jira_Batch_Logs__c.pse__Default_Assignments_for_Jira_Batch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Total_Number_of_External__c</fullName>
        <description>The number of logs where Log Type is External.</description>
        <inlineHelpText>The number of logs where Log Type is External.</inlineHelpText>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>pse__Default_Assignments_for_Jira_Batch_Logs__c.pse__Log_Type__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>pse__Default_Assignments_for_Jira_Batch_Logs__c.pse__Default_Assignments_for_Jira_Batch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Total_Number_of_Logs__c</fullName>
        <description>The total number of logs.</description>
        <inlineHelpText>The total number of logs.</inlineHelpText>
        <label>Total Number of Logs</label>
        <summaryForeignKey>pse__Default_Assignments_for_Jira_Batch_Logs__c.pse__Default_Assignments_for_Jira_Batch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Default Assignments for Jira Batch</label>
    <nameField>
        <label>Default Assignments for Jira Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Default Assignments for Jira Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>